--- a/FootballPredictionApp/Properties/launchSettings.json
+++ b/FootballPredictionApp/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5257",
+      "applicationUrl": "http://localhost:5002", // Zmieniono na port 5002
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7162;http://localhost:5257",
+      "applicationUrl": "https://localhost:5003;http://localhost:5002", // Zmieniono na porty 5002 (HTTP) i 5003 (HTTPS)
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
