--- a/Football-Predictions/appsettings.json
+++ b/Football-Predictions/appsettings.json
@@ -6,4 +6,11 @@
     }
   },
   "AllowedHosts": "*"
+
+  {
+    "FootballDataApi": {
+      "ApiKey": "f652d28f572d46438e0899a88602493a",
+      "BaseUrl": "https://api.football-data.org/v4/"
+    }
+  }
 }
