--- a/Football-Predictions/appsettings.json
+++ b/Football-Predictions/appsettings.json
@@ -5,12 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-
-  {
-    "FootballDataApi": {
-      "ApiKey": "f652d28f572d46438e0899a88602493a",
-      "BaseUrl": "https://api.football-data.org/v4/"
-    }
+  "AllowedHosts": "*",
+  "FootballDataApi": {
+    "ApiKey": "f652d28f572d46438e0899a88602493a",
+    "BaseUrl": "https://api.football-data.org/v4/"
   }
 }
